<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="move_right">Right</string>
    <string name="action_settings">Settings</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="new_game">Reset</string>
    <string name="pause">Pause</string>
    <string name="_60_seconds_left">Timer: 20</string>
</resources>
