<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.example.pacman.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:onClick=""
            android:id="@+id/new_game"/>

        <TextView
            android:id="@+id/points"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/points" />

        <TextView
            android:id="@+id/remainingSeconds"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/_60_seconds_left" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:onClick=""
            android:id="@+id/pause"/>

    </LinearLayout>

    <!-- Notice how the custom view is referenced here with
a full package path-->
    <org.example.pacman.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </org.example.pacman.GameView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/move_left"
        android:id="@+id/moveLeft"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/move_down"
        android:id="@+id/moveDown"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/move_up"
        android:id="@+id/moveUp"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/move_right"
        android:id="@+id/moveRight"/>

</LinearLayout>




</LinearLayout>
